# cats-svg

./: Cargo.toml  build.rs
src/: aze.csv  aze_r.csv  eza.csv  lol.html  main.rs  otzi.csv  regex.txt  result.html  some.csv  some2.csv  some3.csv  svg.csv  svg.rs  svg2.rs  svg2_all.csv  svg2_all.rs  svg3_all_cat.csv  svg4_deprecated.csv  svg_aria_att.csv  svg_att_all.csv  svg_att_all_cat.csv  svg_att_own.txt  tags_html.txt  tags_svg.txt  test.html  transform.rs  zae.csv  zte.csv
testing/codegen/: Cargo.toml
