[package]
name = "cats-svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg="*"
regex="*"
phf = { version = "0.11", default-features = false, features = ["macros"] }
csv = "*"


[[bin]]
name = "transform"
path = "src/transform.rs"
